* new spell notification * negative sound if already known spell or cant learn * new skill sound effect groups * axes deal bonus damage to furniture per 20 skill levels like unarmed does, also charge attacks deal 2x final damage. * unarmed no longer bonus damage to chests ,only axes * dont send monster ally obituaries to all players in splitscreen

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -6402,5 +6402,7 @@ for accessory to violence!#
 4324 You are suddenly burning!#
 4325 You reflected a spell!#
 4326 Next interaction...#
+4327 %s Increased!#
+4328 Spell Learned!#
 
 4399 end#
