--- a/lang/en.txt
+++ b/lang/en.txt
@@ -6404,5 +6404,9 @@ for accessory to violence!#
 4326 Next interaction...#
 4327 %s Increased!#
 4328 Spell Learned!#
+4329 A container of %d items belonging to %s.#
+4330 A container of %d items with no owner.#
+4331 A container of %d items belonging to you.#
+4332 The container spills its contents and vanishes!#
 
 4399 end#
