Using a ladder pings other players if they are out of range DRM-free has local achievements all savegame lobbies are public Fields rebuild Text cache only once in process() svFlags update constantly for clients in menus fix "achievements disabled" text in main menu getting stuck behind top button water tiles show waterfall on sides, lava much the same items bob in water, sink and burn in lava disable lava bubbles on Nintendo lava wall textures are bright
Signed-off-by: SheridanR <sheridan.rathbun@gmail.com>

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -809,7 +809,7 @@ thou makest use of them.#
 506 You descend the ladder.#
 507 You and your party descend the ladder.#
 508 You cannot go back that way.#
-509 You must assemble your party to travel onward.#
+509 %s wants to exit the level.#
 510 You step through the portal.#
 511 You and your party step through the portal.#
 
