* ring of str -> might

--- a/lang/item_names.json
+++ b/lang/item_names.json
@@ -386,7 +386,7 @@
             "name_unidentified": "ring"
         },
         "ring_strength": {
-            "name_identified": "ring of strength",
+            "name_identified": "ring of might",
             "name_unidentified": "ring"
         },
         "ring_constitution": {
