--- a/lang/item_names.json
+++ b/lang/item_names.json
@@ -102,7 +102,7 @@
             "name_unidentified": "gauntlets"
         },
         "gauntlets_strength": {
-            "name_identified": "steel gauntlets of strength",
+            "name_identified": "steel gauntlets of might",
             "name_unidentified": "gauntlets"
         },
         "cloak": {
